--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#list" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">服务器列表</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="spigotserver.html"><span class="item-text">纯净生存1.20.1</span></a>
+                        <a class="dropdown-item" href="spigotserver.html"><span class="item-text">纯净生存1.20.2</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="modserver.html"><span class="item-text">模组空岛1.7.10</span></a>
                     </div>
@@ -150,7 +150,7 @@
                             <img class="img-fluid" src="https://s1.ax1x.com/2020/08/08/a4VLNR.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">纯净生存 1.20.1</h3>
+                            <h3 class="card-title">纯净生存 1.20.2</h3>
                             <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地 商店 称号 砍树等插件。</p>
                             <p class="price"><a style="color:#484a46" href="spigotserver.html">详情</a></p>
                         </div>
@@ -169,10 +169,10 @@
                             <h3 class="card-title">模组空岛 1.7.10</h3>
                             <p>科技魔法空岛服务器,拥有更颖的玩法,搭载了工业 神秘 AE 植物魔法 拔刀剑 无中生有星辉生万物等模组。</p>
                             <!--<p>光影可以更改游戏中光照、天空特效，有的光影也会加上植物、树叶的摇动与火把光照的改变。</p>-->
-                            <p class="price"><a class="price" href="modserver.html">详情</a></p>
+                            <p class="price">维护中</p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://jq.qq.com/?_wv=1027&k=lF0t0eUr" target="_blank">点击加群</a>
+                            <a class="btn-solid-reg page-scroll" href="https://jq.qq.com/?_wv=1027&k=XokgrsUK" target="_blank">点击加群</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
