--- a/spigotserver.html
+++ b/spigotserver.html
@@ -70,10 +70,6 @@
                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">友情外链</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://pdev.top/"><span class="item-text">PDEV</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="https://minecraft.net/"><span class="item-text">Optifine</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="https://minecraft.net/"><span class="item-text">Minecraft</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="https://minepay.top/"><span class="item-text">MinePay</span></a>
@@ -190,8 +186,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p style="color:#dfe5ec;margin-bottom:0rem"> 友情外链:&nbsp;&nbsp;<a target="_blank" href="https://pdev.top/">PDEV</a>&nbsp;&nbsp;<a target="_blank" href="https://www.optifine.net/downloads">Optifine</a>&nbsp;&nbsp;<a target="_blank" href="https://minecraft.net/">Minecraft</a>&nbsp;&nbsp;<a target="_blank" href="https://minepay.top/">MinePay</a>&nbsp;&nbsp;<a target="_blank" href="https://www.anzifan.com/">anzifan</a></p>
-                    <p class="p-small">Copyright &copy; 2022 <a target="_blank" href="index.html">桃花源</a>丨版权所有</p>
+                    <p style="color:#dfe5ec;margin-bottom:0rem"> 友情外链&nbsp;<a target="_blank" href="https://minecraft.net/">Minecraft</a>&nbsp;&nbsp;<a target="_blank" href="https://minepay.top/">MinePay</a>&nbsp;&nbsp;<a target="_blank" href="https://www.anzifan.com/">AnZiFan</a></p>
+                    <p class="p-small">开源许可 MIT License Copyright &copy; 2023 <a target="_blank" href="https://github.com/ranminecraft/Ranmcweb">阿然姐姐</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
