--- a/region.html
+++ b/region.html
@@ -88,7 +88,7 @@
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="https://minepay.top/"><span class="item-text">MinePay</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="https://www.anzifan.com/"><span class="item-text">anzifan</span></a>
+                        <a class="dropdown-item" href="https://www.anzifan.com/"><span class="item-text">AnZiFan</span></a>
                     </div>
                </li>
             </ul>
