--- a/news.html
+++ b/news.html
@@ -143,8 +143,8 @@
                     </div> <!-- end of text-container -->
                     
                     <div class="text-container">
-                        <h3>服务器历史(2017-至今)</h3>
-                        <p> 2017年-网易正式获得我的世界在中国的代理权<br> 2018年-“困难不掉落防爆”网易生存开服<br> 2018年-服务器改名为“桃花源”<br> 2018年-“桃花古苑”纯净生存开服<br> 2019年-“桃花源”网易空岛开服<br> 2020年-停止使用网易租赁服改用国际服<br> 2020年-“桃花源”纯净生存服开服</p>
+                        <h3>服务器历史(2018-至今)</h3>
+                        <p> 2020年-“桃花源”纯净生存服开服<br> 2020年-停止使用网易租赁服改用国际服<br> 2019年-“桃花源”网易空岛开服<br> 2018年-服务器改名为“桃花源”<br> 2018年-“困难不掉落防爆”网易生存开服</p>
                     </div> <!-- end of text-container -->
                     
                     <div class="text-container last">
