--- a/modserver.html
+++ b/modserver.html
@@ -1,3 +1,17 @@
+<!--
+ _ __ __ _ _ __ (_) ___ __ _ 
+| '__/ _` | '_ \| |/ __/ _` |
+| | | (_| | | | | | (_| (_| |
+|_|  \__,_|_| |_|_|\___\__,_|
+                             
+MIT License
+
+Copyright (c) 2023 阿然姐姐
+
+https://github.com/ranminecraft/Ranmcweb
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,7 +68,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="./index.html#list" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">服务器列表</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="spigotserver.html"><span class="item-text">纯净生存1.20.4</span></a>
+                        <a class="dropdown-item" href="spigotserver.html"><span class="item-text">纯净生存    <script type="text/javascript" src="version.js"></script></span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="modserver.html"><span class="item-text">模组空岛1.7.10</span></a>
                     </div>
@@ -119,12 +133,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h3>服务器版本</h3>
-                        <p>1.7.10</p>
-                        <h3>玩家交流群</h3>
-                        <p><a target="_blank" href="https://jq.qq.com/?_wv=1027&k=lF0t0eUr">1139907874</a></p>
-                        <h3>服务器介绍</h3>
-                        <img class="img-fluid" src="https://s1.ax1x.com/2022/07/29/vPRvKP.jpg" alt="alternative" style="margin-bottom:1rem" width="780">
+                        <h3>服务器当前维护中...</h3>
                     </div> <!-- end of text-container -->
                 <a class="btn-outline-reg" href="index.html">返回</a>
                 </div> <!-- end of text-container -->
