--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--
+ _ __ __ _ _ __ (_) ___ __ _ 
+| '__/ _` | '_ \| |/ __/ _` |
+| | | (_| | | | | | (_| (_| |
+|_|  \__,_|_| |_|_|\___\__,_|
+                             
+MIT License
+
+Copyright (c) 2023 阿然姐姐
+
+https://github.com/ranminecraft/Ranmcweb
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,58 +48,7 @@
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-        <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
-               
-        <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img src="https://z3.ax1x.com/2021/01/14/sUds6x.png" alt="alternative"></a>
-
-        <!-- Mobile Menu Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="true" aria-label="Toggle navigation">
-        <span class="navbar-toggler-awesome fas fa-bars"></span>
-        <span class="navbar-toggler-awesome fas fa-times"></span>
-        </button>
-        <!-- end of mobile menu toggle button -->
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">首页</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#info">服务器介绍</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#list" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">服务器列表</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="spigotserver.html"><span class="item-text">纯净生存1.20.4</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="modserver.html"><span class="item-text">模组空岛1.7.10</span></a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#picture">风景欣赏</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="news.html">游戏公告</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="banlist.html">封禁列表</a>
-               </li>
-               <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">友情外链</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://minecraft.net/"><span class="item-text">Minecraft</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="https://minepay.top/"><span class="item-text">MinePay</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="https://www.anzifan.com/"><span class="item-text">AnZiFan</span></a>
-                    </div>
-               </li>
-            </ul>
-        </div>
-    </nav>
+    <script type="text/javascript" src="./pageJs/header.js"></script>
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -146,12 +109,12 @@
                             <img class="img-fluid" src="https://s1.ax1x.com/2020/08/08/a4VLNR.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">纯净生存 1.20.4</h3>
+                            <h3 class="card-title">纯净生存     <script type="text/javascript" src="./pageJs/version.js"></script></h3>
                             <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地 商店 称号 砍树等插件。</p>
                             <p class="price"><a style="color:#484a46" href="spigotserver.html">详情</a></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://jq.qq.com/?_wv=1027&k=XokgrsUK" target="_blank">点击加群</a>
+                            <script type="text/javascript" src="./pageJs/groupChat.js"></script>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -168,7 +131,7 @@
                             <p class="price">维护中</p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://jq.qq.com/?_wv=1027&k=XokgrsUK" target="_blank">点击加群</a>
+                            <script type="text/javascript" src="./pageJs/groupChat.js"></script>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -422,34 +385,7 @@
     <!-- end of details 2 -->
 
 
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="text-container about">
-                        <h4>关于更多</h4>
-                        <p style="color:#dfe5ec;margin-bottom:0rem">运营By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">阿然</a></p>
-                        <p style="color:#dfe5ec;margin-bottom:0rem">美工By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">阿然</a></p>
-                        <p style="color:#dfe5ec;margin-bottom:0rem">建筑By <a href="https://jq.qq.com/?_wv=1027&k=XokgrsUK">光圈</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Copyright -->
-    <div class="copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p style="color:#dfe5ec;margin-bottom:0rem"> 友情外链&nbsp;<a target="_blank" href="https://minecraft.net/">Minecraft</a>&nbsp;&nbsp;<a target="_blank" href="https://minepay.top/">MinePay</a>&nbsp;&nbsp;<a target="_blank" href="https://www.anzifan.com/">AnZiFan</a></p>
-                    <p class="p-small">开源许可 MIT License Copyright &copy; 2023 <a target="_blank" href="https://github.com/ranminecraft/Ranmcweb">阿然姐姐</a></p>
-                </div> <!-- end of col -->
-            </div> <!-- enf of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of copyright --> 
-    <!-- end of copyright -->
+    <script type="text/javascript" src="./pageJs/footer.js"></script>
 
     <!-- Scripts -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
