--- a/season/index.html
+++ b/season/index.html
@@ -1,3 +1,17 @@
+<!--
+ _ __ __ _ _ __ (_) ___ __ _ 
+| '__/ _` | '_ \| |/ __/ _` |
+| | | (_| | | | | | (_| (_| |
+|_|  \__,_|_| |_|_|\___\__,_|
+                             
+MIT License
+
+Copyright (c) 2023 阿然姐姐
+
+https://github.com/ranminecraft/Ranmcweb
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
