更新 java下载地址

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ https://github.com/ranminecraft/Ranmcweb
                             <p class="price"><a class="price" href="https://www.java.com/zh_CN/" target="_blank">详情</a></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://www.oracle.com/java/technologies/downloads/#java17" target="_blank">下载</a>
+                            <a class="btn-solid-reg page-scroll" href="https://www.oracle.com/java/technologies/downloads/#jdk21-windows" target="_blank">下载</a>
                             <!-- <a class="btn-solid-reg page-scroll" href="https://download.mcbbs.net/java/jre_x64.exe" target="_blank">下载</a> -->
                         </div> <!-- end of button-container -->
                     </div>
