更新 java下载地址

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ https://github.com/ranminecraft/Ranmcweb
                         <div class="card-body">
                             <h3 class="card-title">JAVA(64位)</h3>
                             <p>Java是一项用于开发应用程序或者游戏的技术，你必须安装JAVA才能启动游戏。</p>
-                            <p class="price"><a class="price" href="https://www.java.com/zh_CN/" target="_blank">详情</a></p>
+                            <p class="price"><a class="price" href="https://www.oracle.com/java/technologies/downloads/#jdk21-windows" target="_blank">详情</a></p>
                         </div>
                         <div class="button-container">
                             <a class="btn-solid-reg page-scroll" href="https://www.oracle.com/java/technologies/downloads/#jdk21-windows" target="_blank">下载</a>
