--- a/verify.html
+++ b/verify.html
@@ -118,7 +118,7 @@ https://github.com/ranminecraft/Ranmcweb
         const contentElement = document.getElementById('result');  
       
         // 获取当前页面的URI  
-        const currentURI = 'https://stmcicp.ranmc.cc:2263/verify' + window.location.search;  
+        const currentURI = 'https://point.ranmc.cc:2263/verify' + window.location.search;  
       
         // 使用fetch API发送GET请求  
         fetch(currentURI)  
@@ -136,7 +136,7 @@ https://github.com/ranminecraft/Ranmcweb
             })  
             .catch(error => {  
                 // 如果发生错误，显示错误消息  
-                contentElement.textContent = '发生错误:' + error.message;  
+                contentElement.textContent = '发生错误:' + error;  
             });  
     });
 </script>  
