更新服务器地址

--- a/verify.html
+++ b/verify.html
@@ -118,7 +118,7 @@ https://github.com/ranminecraft/Ranmcweb
         const contentElement = document.getElementById('result');  
       
         // 获取当前页面的URI  
-        const currentURI = 'https://point.ranmc.cc:2263/verify' + window.location.search;  
+        const currentURI = 'https://minelive.top:2263/verify' + window.location.search;  
       
         // 使用fetch API发送GET请求  
         fetch(currentURI)  
