update api address

--- a/banlist.html
+++ b/banlist.html
@@ -147,7 +147,7 @@ var $table;
        //初始化bootstrap-table的内容
        function InitMainTable () {
            //记录页面bootstrap-table全局变量$table，方便应用
-           var queryUrl = 'https://point.ranmc.cc/banlist'
+           var queryUrl = 'https://api.ranmc.cc/banlist'
            $table = $('#table').bootstrapTable({
             locale: 'zh-CN',
                url: queryUrl,                      //请求后台的URL（*）
