--- a/verify.html
+++ b/verify.html
@@ -79,7 +79,7 @@ https://github.com/ranminecraft/Ranmcweb
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h3 id="result">服务器当前维护中...</h3>
+                        <h3 id="result">正在验证中，请稍后...</h3>
                     </div> <!-- end of text-container -->
                 <a class="btn-outline-reg" href="index.html">返回</a>
                 </div> <!-- end of text-container -->
