--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@ https://github.com/ranminecraft/Ranmcweb
                     
                     <div class="text-container">
                         <h3>更新内容</h3>
-                        <p>2023.06.02 桃花源纯净生存-升级为1.20版本<br>2022.06.10 桃花源纯净生存-升级为1.19版本<br>2021.12.01 桃花源纯净生存-升级为1.18版本<br>2021.06.13 桃花源纯净生存-升级为1.17版本<br>2020.07.15 桃花源纯净生存-升级为1.16版本<br>2020.07.13 桃花源纯净生存-迁移服务器成功<br>2020.07.04 桃花源纯净生存服-开服</p>
+                        <p>2024.06.18 桃花源纯净生存-升级为1.21版本<br>2023.06.02 桃花源纯净生存-升级为1.20版本<br>2022.06.10 桃花源纯净生存-升级为1.19版本<br>2021.12.01 桃花源纯净生存-升级为1.18版本<br>2021.06.13 桃花源纯净生存-升级为1.17版本<br>2020.07.15 桃花源纯净生存-升级为1.16版本<br>2020.07.13 桃花源纯净生存-迁移服务器成功<br>2020.07.04 桃花源纯净生存服-开服</p>
                     </div> <!-- end of text-container -->
                 
                     <div class="text-container">
