--- a/banlist.html
+++ b/banlist.html
@@ -119,8 +119,8 @@ https://github.com/ranminecraft/Ranmcweb
     <script type="text/javascript" src="./pageJs/footer.js"></script>
     <!-- end of copyright -->
     <!-- Scripts -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/popper.js/1.15.0/umd/popper.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
     <script src="js/tableExport.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
@@ -129,13 +129,13 @@ https://github.com/ranminecraft/Ranmcweb
     <script src="js/bootstrap-table-export.min.js"></script>
 
     <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <!-- Swiper for image and text sliders -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
     <!-- Magnific Popup for lightboxes -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/Morphext/2.4.4/morphext.min.js"></script>
+    <script src="js/morphext.min.js"></script>
     <!-- Morphtext rotating text in the header -->
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
     <!-- Isotope for filter -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
