--- a/banlist.html
+++ b/banlist.html
@@ -39,7 +39,7 @@ https://github.com/ranminecraft/Ranmcweb
 
     <!-- Styles -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <link href="css/bootstrap-table.min.css" rel="stylesheet">
    
     <!-- Favicon  -->
