--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet"> -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
-    <link href="css/styles.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
     <link rel="icon" href="image/icon.png">
