--- a/spigotserver.html
+++ b/spigotserver.html
@@ -25,7 +25,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- Styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
-    <link href="css/styles.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
     <link rel="icon" href="image/icon.png">
@@ -103,7 +103,7 @@ https://github.com/ranminecraft/Ranmcweb
                         <h3>截图欣赏</h3>
                         <img class="img-fluid" src="image/a4V6BQ.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
                         <p>古风的建筑风格，美在神秘，美在天然。<br></p>
-                        <img class="img-fluid" src="image/a4Vc7j.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
+                        <img class="img-fluid" src="image/ac5ZB8.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
                         <p>与自然风光相映成趣的，是纯朴的田园风，纯净养老的去处。<br></p>
                         <img class="img-fluid" src="image/do0xc8.jpg" alt="alternative" width="640" height="360px">
                         <p><br>七夕活动，一个和谐有爱的社区玩家合照。<br></p>
