--- a/verify.html
+++ b/verify.html
@@ -24,7 +24,7 @@ https://github.com/ranminecraft/Ranmcweb
 
     <!-- Styles -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styles.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
     <link rel="icon" href="image/icon.png">
