--- a/banlist.html
+++ b/banlist.html
@@ -13,7 +13,7 @@ https://github.com/ranminecraft/Ranmcweb
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8">
