--- a/region.html
+++ b/region.html
@@ -13,7 +13,7 @@ https://github.com/ranminecraft/Ranmcweb
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
