--- a/banlist.html
+++ b/banlist.html
@@ -43,7 +43,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/bootstrap-table.min.css" rel="stylesheet">
    
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -60,7 +60,7 @@ https://github.com/ranminecraft/Ranmcweb
     </div>
     <!-- end of preloader -->
 
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
 
     <!-- Header -->
     <header id="header" class="ex-header">
@@ -116,7 +116,7 @@ https://github.com/ranminecraft/Ranmcweb
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
     <!-- end of copyright -->
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
