--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -48,7 +48,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -84,7 +84,7 @@ https://github.com/ranminecraft/Ranmcweb
                 </div> <!-- end of col -->
                 <div class="col-lg-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="image/a4Vyng.jpg" alt="alternative">
+                        <img class="img-fluid" src="img/a4Vyng.jpg" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -106,15 +106,15 @@ https://github.com/ranminecraft/Ranmcweb
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="image/a4VLNR.jpg" alt="alternative">
+                            <img class="img-fluid" src="img/a4VLNR.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">纯净生存     <script type="text/javascript" src="./pageJs/version.js"></script></h3>
+                            <h3 class="card-title">纯净生存     <script type="text/javascript" src="constant/version.js"></script></h3>
                             <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地 商店 称号 砍树等插件。</p>
                             <p class="price"><a style="color:#484a46" href="spigotserver.html">详情</a></p>
                         </div>
                         <div class="button-container">
-                            <script type="text/javascript" src="./pageJs/groupChat.js"></script>
+                            <script type="text/javascript" src="constant/groupChat.js"></script>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -122,7 +122,7 @@ https://github.com/ranminecraft/Ranmcweb
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="image/a4Vj9x.jpg" alt="alternative">
+                            <img class="img-fluid" src="img/a4Vj9x.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">模组空岛 1.7.10</h3>
@@ -131,7 +131,7 @@ https://github.com/ranminecraft/Ranmcweb
                             <p class="price">维护中</p>
                         </div>
                         <div class="button-container">
-                            <script type="text/javascript" src="./pageJs/groupChat.js"></script>
+                            <script type="text/javascript" src="constant/groupChat.js"></script>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -139,7 +139,7 @@ https://github.com/ranminecraft/Ranmcweb
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="image/a4VqE9.jpg" alt="alternative">
+                            <img class="img-fluid" src="img/a4VqE9.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">JAVA(64位)</h3>
@@ -179,28 +179,28 @@ https://github.com/ranminecraft/Ranmcweb
                     </div> <!-- end of button group -->
                     <div class="grid">
                         <div class="element-item design">
-                            <a class="popup-with-move-anim" href="#pic-1"><div class="element-item-overlay"><span>主城风景1</span></div><img src="image/a4V43V.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-1"><div class="element-item-overlay"><span>主城风景1</span></div><img src="img/a4V43V.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item design">
-                            <a class="popup-with-move-anim" href="#pic-2"><div class="element-item-overlay"><span>主城风景2</span></div><img src="image/a4VWhq.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-2"><div class="element-item-overlay"><span>主城风景2</span></div><img src="img/a4VWhq.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item development">
-                            <a class="popup-with-move-anim" href="#pic-3"><div class="element-item-overlay"><span>宣传海报</span></div><img src="image/vzQNWj.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-3"><div class="element-item-overlay"><span>宣传海报</span></div><img src="img/vzQNWj.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item marketing">
-                            <a class="popup-with-move-anim" href="#pic-4"><div class="element-item-overlay"><span>七夕活动合照</span></div><img src="image/do0xc8.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-4"><div class="element-item-overlay"><span>七夕活动合照</span></div><img src="img/do0xc8.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item marketing">
-                            <a class="popup-with-move-anim" href="#pic-5"><div class="element-item-overlay"><span>玩家合照1</span></div><img src="image/a4V7B4.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-5"><div class="element-item-overlay"><span>玩家合照1</span></div><img src="img/a4V7B4.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item marketing">
-                            <a class="popup-with-move-anim" href="#pic-7"><div class="element-item-overlay"><span>玩家合照2</span></div><img src="image/vzQsTU.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-7"><div class="element-item-overlay"><span>玩家合照2</span></div><img src="img/vzQsTU.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item seo">
-                            <a class="popup-with-move-anim" href="#pic-6"><div class="element-item-overlay"><span>玩家建筑</span></div><img src="image/vzQf61.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-6"><div class="element-item-overlay"><span>玩家建筑</span></div><img src="img/vzQf61.jpg" alt="alternative"></a>
                         </div>
                         <div class="element-item seo">
-                            <a class="popup-with-move-anim" href="#pic-8"><div class="element-item-overlay"><span>社区小镇</span></div><img src="image/vzQLpd.jpg" alt="alternative"></a>
+                            <a class="popup-with-move-anim" href="#pic-8"><div class="element-item-overlay"><span>社区小镇</span></div><img src="img/vzQLpd.jpg" alt="alternative"></a>
                         </div>
                     </div> <!-- end of grid -->
                     <!-- end of filter -->
@@ -218,7 +218,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/a4V43V.jpg" alt="alternative">
+                <img class="img-fluid" src="img/a4V43V.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>主城风景1</h3>
@@ -236,7 +236,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/a4VWhq.jpg" alt="alternative">
+                <img class="img-fluid" src="img/a4VWhq.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>主城风景2</h3>
@@ -254,7 +254,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/vzQNWj.jpg" alt="alternative">
+                <img class="img-fluid" src="img/vzQNWj.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>宣传海报</h3>
@@ -272,7 +272,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/do0xc8.jpg" alt="alternative">
+                <img class="img-fluid" src="img/do0xc8.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>七夕活动合照</h3>
@@ -290,7 +290,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/a4V7B4.jpg" alt="alternative">
+                <img class="img-fluid" src="img/a4V7B4.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>玩家合照1</h3>
@@ -307,7 +307,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/vzQf61.jpg" alt="alternative">
+                <img class="img-fluid" src="img/vzQf61.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>玩家建筑</h3>
@@ -324,7 +324,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/vzQsTU.jpg" alt="alternative">
+                <img class="img-fluid" src="img/vzQsTU.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>玩家合照2</h3>
@@ -342,7 +342,7 @@ https://github.com/ranminecraft/Ranmcweb
         <div class="row">
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-8">
-                <img class="img-fluid" src="image/vzQLpd.jpg" alt="alternative">
+                <img class="img-fluid" src="img/vzQLpd.jpg" alt="alternative">
             </div> <!-- end of col -->
             <div class="col-lg-4">
                 <h3>社区小镇</h3>
@@ -385,7 +385,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of details 2 -->
 
 
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
 
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
