--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
@@ -44,7 +44,7 @@ https://github.com/ranminecraft/Ranmcweb
 
     <!-- Navbar -->
 
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
 
 
