--- a/spigotserver.html
+++ b/spigotserver.html
@@ -28,7 +28,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -44,7 +44,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -83,7 +83,7 @@ https://github.com/ranminecraft/Ranmcweb
                         <h3>服务器地址</h3>
                         <p>ranmc.cc</p>
                         <h3>服务器版本</h3>
-                        <script type="text/javascript" src="./pageJs/version.js"></script>
+                        <script type="text/javascript" src="constant/version.js"></script>
                         <h3>客户端下载</h3>
                         <p><a target="_blank" href="https://pan.baidu.com/s/1YAQJhjbkB9l9g4KyowxxCw?pwd=6666">百度网盘</a>(提取码6666)</p>
                         <h3>服务器介绍</h3>
@@ -101,11 +101,11 @@ https://github.com/ranminecraft/Ranmcweb
                             请大家珍惜账号自觉遵守游戏规则
                         </p>
                         <h3>截图欣赏</h3>
-                        <img class="img-fluid" src="image/a4V6BQ.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
+                        <img class="img-fluid" src="img/a4V6BQ.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
                         <p>古风的建筑风格，美在神秘，美在天然。<br></p>
-                        <img class="img-fluid" src="image/ac5ZB8.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
+                        <img class="img-fluid" src="img/ac5ZB8.jpg" alt="alternative" style="margin-bottom:1rem" width="640" height="360px">
                         <p>与自然风光相映成趣的，是纯朴的田园风，纯净养老的去处。<br></p>
-                        <img class="img-fluid" src="image/do0xc8.jpg" alt="alternative" width="640" height="360px">
+                        <img class="img-fluid" src="img/do0xc8.jpg" alt="alternative" width="640" height="360px">
                         <p><br>七夕活动，一个和谐有爱的社区玩家合照。<br></p>
                     </div> <!-- end of text-container -->
                     <a class="btn-outline-reg" href="index.html">返回</a>
@@ -129,7 +129,7 @@ https://github.com/ranminecraft/Ranmcweb
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
 
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
     <script src="js/bootstrap.min.js"></script>
