--- a/design.html
+++ b/design.html
@@ -68,7 +68,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body data-spy="scroll" data-target=".fixed-top" onload="countTime()">
@@ -84,7 +84,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -115,7 +115,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of header -->
 
 
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
 
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
