--- a/halloween.html
+++ b/halloween.html
@@ -32,7 +32,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/halloween.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -48,7 +48,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
 
     <!-- Header -->
@@ -99,7 +99,7 @@ https://github.com/ranminecraft/Ranmcweb
     </div> <!-- end of tabs -->
     <!-- end of details 2 -->
 
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
 
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script>
