--- a/modserver.html
+++ b/modserver.html
@@ -30,7 +30,7 @@ https://github.com/ranminecraft/Ranmcweb
     <link href="css/styles.css" rel="stylesheet">
     
     <!-- Favicon  -->
-    <link rel="icon" href="image/icon.png">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
@@ -46,7 +46,7 @@ https://github.com/ranminecraft/Ranmcweb
     <!-- end of preloader -->
 
     <!-- Navbar -->
-    <script type="text/javascript" src="./pageJs/header.js"></script>
+    <script type="text/javascript" src="constant/header.js"></script>
     <!-- end of navbar -->
     
     <!-- Header -->
@@ -104,7 +104,7 @@ https://github.com/ranminecraft/Ranmcweb
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
 
-    <script type="text/javascript" src="./pageJs/footer.js"></script>
+    <script type="text/javascript" src="constant/footer.js"></script>
     <!-- Scripts -->
     <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
     <script src="js/bootstrap.min.js"></script>
