--- a/banlist.html
+++ b/banlist.html
@@ -298,4 +298,5 @@ var $table;
       margin-right: 10px;
     }
   </style>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </html>
