--- a/check.html
+++ b/check.html
@@ -122,8 +122,8 @@ https://github.com/ranminecraft/Ranmcweb
             contentElement.textContent = "已确认，请勿重复操作。";
         } else if (result === "?result=3") {
             contentElement.textContent = "已超时，请重新点击游戏内最新链接。";
-        }
-    });
-</script>  
+        }});
+    </script>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </body>
 </html>
