--- a/design.html
+++ b/design.html
@@ -127,7 +127,7 @@ https://github.com/ranminecraft/Ranmcweb
     <script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
     
     <script src="js/scripts.js"></script>
-    
+    <script type="text/javascript" src="constant/collect.js"></script>
     <!-- Custom scripts -->
 </body>
 </html>
