--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ https://github.com/ranminecraft/Ranmcweb
                         <div class="card-body">
                             <h3 class="card-title">纯净生存     <script type="text/javascript" src="constant/version.js"></script></h3>
                             <p>原版纯净高版本生存服务器,保留原汁原味玩法,享受田园生活,仅有基础玩法领地 商店 称号 砍树等插件。</p>
-                            <p class="price"><a style="color:#484a46" href="spigotserver.html">详情</a></p>
+                            <p class="price"><a style="color:#484a46" href="server.html">详情</a></p>
                         </div>
                         <div class="button-container">
                             <script type="text/javascript" src="constant/groupChat.js"></script>
@@ -125,13 +125,12 @@ https://github.com/ranminecraft/Ranmcweb
                             <img class="img-fluid" src="img/a4Vj9x.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">模组空岛 1.7.10</h3>
-                            <p>科技魔法空岛服务器,拥有更颖的玩法,搭载了工业 神秘 AE 植物魔法 拔刀剑 无中生有星辉生万物等模组。</p>
-                            <!--<p>光影可以更改游戏中光照、天空特效，有的光影也会加上植物、树叶的摇动与火把光照的改变。</p>-->
-                            <p class="price">维护中</p>
+                            <h3 class="card-title">光影</h3>
+                            <p>光影可以更改游戏中光照、天空特效，有的光影也会加上植物、树叶的摇动与火把光照的改变。</p>
+                            <p class="price"><a style="color:#484a46" href="https://optifine.net/" target="_blank">详情</a></p>
                         </div>
                         <div class="button-container">
-                            <script type="text/javascript" src="constant/groupChat.js"></script>
+                            <a class="btn-solid-reg page-scroll" href="https://optifine.net/downloads" target="_blank">下载</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -142,12 +141,12 @@ https://github.com/ranminecraft/Ranmcweb
                             <img class="img-fluid" src="img/a4VqE9.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">JAVA(64位)</h3>
+                            <h3 class="card-title">JAVA</h3>
                             <p>Java是一项用于开发应用程序或者游戏的技术，你必须安装JAVA才能启动游戏。</p>
-                            <p class="price"><a class="price" href="https://www.oracle.com/java/technologies/downloads/#jdk21-windows" target="_blank">详情</a></p>
+                            <p class="price"><a class="price" href="https://www.azul.com/downloads" target="_blank">详情</a></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://www.oracle.com/java/technologies/downloads/#jdk21-windows" target="_blank">下载</a>
+                            <a class="btn-solid-reg page-scroll" href="https://www.azul.com/downloads" target="_blank">下载</a>
                             <!-- <a class="btn-solid-reg page-scroll" href="https://download.mcbbs.net/java/jre_x64.exe" target="_blank">下载</a> -->
                         </div> <!-- end of button-container -->
                     </div>
@@ -397,6 +396,7 @@ https://github.com/ranminecraft/Ranmcweb
     <script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
     
     <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="constant/collect.js"></script>
     
     <!-- Custom scripts -->
 </body>
