--- a/news.html
+++ b/news.html
@@ -159,6 +159,7 @@ https://github.com/ranminecraft/Ranmcweb
     <script src="js/jquery.magnific-popup.min.js"></script> <!-- Magnific Popup for lightboxes -->
     <script src="js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
     <script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
-    <script src="js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="js/scripts.js"></script>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </body>
 </html>
