--- a/region.html
+++ b/region.html
@@ -215,5 +215,6 @@ https://github.com/ranminecraft/Ranmcweb
             }
         }
     </script>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </body>
 </html>
