--- a/shopbk.html
+++ b/shopbk.html
@@ -119,7 +119,7 @@ https://github.com/ranminecraft/Ranmcweb
                     <form data-toggle="validator" data-focus="false">
                         <div class="form-group">
                             <select class="form-control-select" required>
-                                <option class="select-option"><script type="text/javascript" src="version.js"></script>桃花源纯净生存</option>
+                                <option class="select-option"><script type="text/javascript" src="constant/version.js"></script>桃花源纯净生存</option>
                             </select>
                             <div class="help-block with-errors"></div>
                         </div>
@@ -229,5 +229,6 @@ https://github.com/ranminecraft/Ranmcweb
             }
         }
     </script>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </body>
 </html>
