--- a/verify.html
+++ b/verify.html
@@ -138,7 +138,8 @@ https://github.com/ranminecraft/Ranmcweb
                 // 如果发生错误，显示错误消息  
                 contentElement.textContent = '发生错误:' + error;  
             });  
-    });
-</script>  
+        });
+    </script>
+    <script type="text/javascript" src="constant/collect.js"></script>
 </body>
 </html>
