--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ https://github.com/ranminecraft/Ranmcweb
                 <!-- Accordion -->
                 <h2>服务器后台</h2>
                 <br>
-                <p>我们采用了专业的服务器托管商，拥有6核128G高配，不再担心服务器卡顿或过载，本服务器没有地图限制，不限制玩家跑图，只为给玩家更好的游戏体验。<p>
+                <p>我们采用了专业的独立机服务器，拥有8核128G高配，不再担心服务器卡顿或过载，本服务器没有地图限制，不限制玩家跑图，只为给玩家更好的游戏体验。<p>
             </div> <!-- end of tabs-container -->
         </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
     </div> <!-- end of tabs -->
