--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 | | | (_| | | | | | (_| (_| |
 |_|  \__,_|_| |_|_|\___\__,_|
 
-MIT LicenseCopyright (c) 2023 阿然姐姐https://github.com/ranminecraft/Ranmcweb-->
+MIT LicenseCopyright (c) 2023 阿然姐姐
+
+https://github.com/ranminecraft/Ranmcweb
+
+-->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
