--- a/server.html
+++ b/server.html
@@ -53,7 +53,7 @@
                     <script type="text/javascript" src="constant/version.js"></script>
                     <h3>客户端下载</h3>
                     <p>
-                        <a target="_blank" href="https://pan.baidu.com/s/12r12ZG1HexjqsNuXNAUp3Q?pwd=6666">百度网盘</a>(提取码6666)
+                        <a target="_blank" href="https://pan.quark.cn/s/cb32fe2d827d">夸克网盘</a>
                     </p>
                     <h3>服务器介绍</h3>
                     <p>欢迎加入我们的QQ群: <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=LE3avMylzVe1aniqZ_mvxEc1EzwhYyLd&authKey=%2F1jA8wis%2F1N31FYwZ2Gp%2B52kRBZKnJrAaRMxOXgU5kRVtAstWkQoYS9%2B%2BSnbFFsr&noverify=0&group_code=429357720">429357720</a>
