更新加群链接

--- a/server.html
+++ b/server.html
@@ -56,7 +56,7 @@
                         <a target="_blank" href="https://pan.quark.cn/s/b94b723c4ab8">夸克网盘</a>
                     </p>
                     <h3>服务器介绍</h3>
-                    <p>欢迎加入我们的QQ群: <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=LE3avMylzVe1aniqZ_mvxEc1EzwhYyLd&authKey=%2F1jA8wis%2F1N31FYwZ2Gp%2B52kRBZKnJrAaRMxOXgU5kRVtAstWkQoYS9%2B%2BSnbFFsr&noverify=0&group_code=429357720">429357720</a>
+                    <p>欢迎加入我们的QQ群: <a target="_blank" href="https://qun.qq.com/universal-share/share?ac=1&authKey=MLHOTkfkfj7S6Cj319OMoiNDX9ADNduKqvSnlY3cZpWUUobPNGARQPT6K7MOq5qq&busi_data=eyJncm91cENvZGUiOiI1Nzk4ODI1MDUiLCJ0b2tlbiI6Ik5VbHc5QWlLWEkrd2I4QmVFUzFvTEFRMW1SL1JRNTdGdkpmVFlWWWdaNkVzYkMwL2FZcXVwRW5PS3hORE">579882505</a>
                     </p>
                     <p> 这是一个长期开放的原版纯净高版本生存服务器 <br>
                         <br> 保留了原汁原味的体验,仅有基础玩法经济等插件 <br>
